部分内容修改